# sqlfortify

./: Cargo.toml  README.md  config_example.toml  mysql_states.md  postgres_proto.txt  postgres_states.md
src/: _main_test.rs  base_session.rs  cockroach_detector.rs  cockroach_token.rs  connection.rs  derive_cockroach_tokens.py  event_handler.rs  iso_token.rs  key_pool.rs  main.rs  matcher.rs  mysql_session.rs  mysql_wire.rs  postgres_packet.rs  postgres_session.rs  postgres_token.rs  proxy.rs  ring_buffer.rs  session.rs  sql.rs  sql_session.rs  sql_wire.rs  sqli_detector.rs  token.rs  validator.rs  wire.rs  wire_reader.rs
src/sql/: cockroach_detector.rs  cockroach_token.rs  postgres_token.rs
src/sql_wire/: mysql_packet.rs  mysql_session.rs  postgres_packet.rs  postgres_session.rs  wire_reader.rs
