[package]
name = "sqlfortify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12"
phf = { version = "0.10", features = ["macros"] }
polling = "2.2"
socket2 = { version = "0.4", features = ["all"] }
log = "0.4"
env_logger = "0.9"
libc = "0.2"