[package]
name = "sqlfortify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2" # `socket2` and `polling` depend on libc anyways
polling = "2.2"
socket2 = { version = "0.4.7", features = ["all"] }
log = "0.4"
env_logger = "0.9"

phf = { version = "0.11", features = ["macros"] }
enum-display-derive = "0.1"
